--- a/index.html
+++ b/index.html
@@ -166,16 +166,133 @@
           </ul>
         </div>
       </li>
-      <li class="link">
+      <li class="link resources active">
         <a href="" class="link-item">
-          <span class="text">Docs</span>
+          <span class="text">Resources</span>
           <svg height="16" stroke-linejoin="round" viewBox="0 0 16 16" width="16" aria-hidden="true">
             <path fill-rule="evenodd" clip-rule="evenodd" d="M12.0607 6.74999L11.5303 7.28032L8.7071 10.1035C8.31657 10.4941 7.68341 10.4941 7.29288 10.1035L4.46966 7.28032L3.93933 6.74999L4.99999 5.68933L5.53032 6.21966L7.99999 8.68933L10.4697 6.21966L11 5.68933L12.0607 6.74999Z" fill="currentColor"></path>
           </svg>
         </a>
+        <div class="drop-down">
+          <span class="arrow"></span>
+          <ul class="main">
+            <h4 class="title">Tools</h4>
+            <li class="item icon">
+              <a href="" class="link">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-code-slash"
+                  viewBox="0 0 16 16">
+                  <path
+                    d="M10.478 1.647a.5.5 0 1 0-.956-.294l-4 13a.5.5 0 0 0 .956.294zM4.854 4.146a.5.5 0 0 1 0 .708L1.707 8l3.147 3.146a.5.5 0 0 1-.708.708l-3.5-3.5a.5.5 0 0 1 0-.708l3.5-3.5a.5.5 0 0 1 .708 0m6.292 0a.5.5 0 0 0 0 .708L14.293 8l-3.147 3.146a.5.5 0 0 0 .708.708l3.5-3.5a.5.5 0 0 0 0-.708l-3.5-3.5a.5.5 0 0 0-.708 0" />
+                </svg>
+                <span class="content">
+                  <h5 class="name">Integration</h5>
+                  <span class="text">Consume our apis in your app</span>
+                </span>
+              </a>
+            </li>
+            <li class="item journal">
+              <a href="" class="link">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M8.15552 15.45C8.15552 15.0357 8.4913 14.7 8.90552 14.7H14.3055C14.7197 14.7 15.0555 15.0357 15.0555 15.45C15.0555 15.8642 14.7197 16.2 14.3055 16.2H8.90552C8.4913 16.2 8.15552 15.8642 8.15552 15.45Z"
+                    fill="currentColor" />
+                  <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M8.15454 11.4386C8.15454 11.0244 8.49033 10.6886 8.90454 10.6886H12.2605C12.6748 10.6886 13.0105 11.0244 13.0105 11.4386C13.0105 11.8528 12.6748 12.1886 12.2605 12.1886H8.90454C8.49033 12.1886 8.15454 11.8528 8.15454 11.4386Z"
+                    fill="currentColor" />
+                  <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M4.93052 4.27249C6.46237 2.58293 8.83824 2 12.0399 2C12.9666 2 13.8214 2.05142 14.5917 2.15694C14.7477 2.17832 14.8931 2.24827 15.0071 2.3569L20.6771 7.7569C20.7923 7.86656 20.8696 8.00998 20.8979 8.16645C21.0983 9.27377 21.1899 10.5511 21.1899 12C21.1899 15.4998 20.6712 18.0653 19.1576 19.7318C17.6242 21.42 15.2455 22 12.0399 22C8.83897 22 6.46283 21.4199 4.93074 19.7315C3.41862 18.0651 2.8999 15.4999 2.8999 12C2.8999 8.5048 3.41874 5.93992 4.93052 4.27249ZM6.04178 5.28001C4.93107 6.50508 4.3999 8.5652 4.3999 12C4.3999 15.4401 4.93118 17.4999 6.04156 18.7235C7.13197 19.9251 8.95083 20.5 12.0399 20.5C15.1343 20.5 16.9557 19.925 18.0472 18.7232C19.1586 17.4997 19.6899 15.4402 19.6899 12C19.6899 10.7185 19.6149 9.61383 19.4626 8.67165L14.1509 3.61282C13.52 3.53823 12.8146 3.5 12.0399 3.5C8.95156 3.5 7.13244 4.07707 6.04178 5.28001Z"
+                    fill="currentColor" />
+                  <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M13.9343 2.08264C14.3485 2.08264 14.6843 2.41843 14.6843 2.83264V5.49364C14.6843 6.93714 15.8542 8.10664 17.2983 8.10664H20.2493C20.6635 8.10664 20.9993 8.44243 20.9993 8.85664C20.9993 9.27086 20.6635 9.60664 20.2493 9.60664H17.2983C15.0264 9.60664 13.1843 7.76615 13.1843 5.49364V2.83264C13.1843 2.41843 13.5201 2.08264 13.9343 2.08264Z"
+                    fill="currentColor" />
+                </svg>
+                <span class="content">
+                  <h5 class="name">Journals</h5>
+                  <span class="text">Add public journals</span>
+                </span>
+              </a>
+            </li>
+            <li class="item shop">
+              <a href="" class="link">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M7.43775 6.42099C7.44374 3.91887 9.47616 1.895 11.9792 1.89979C14.4809 1.90578 16.505 3.93866 16.4997 6.44032C16.4997 6.44074 16.4997 6.44116 16.4997 6.44158L15.7497 6.43979L16.4997 6.44032V9.47179C16.4997 9.886 16.164 10.2218 15.7497 10.2218C15.3355 10.2218 14.9997 9.886 14.9997 9.47179V6.43979L14.9997 6.43799C15.0038 4.76435 13.65 3.40399 11.9763 3.39979C10.3018 3.39677 8.94221 4.75037 8.93774 6.42374V9.47179C8.93774 9.886 8.60196 10.2218 8.18774 10.2218C7.77353 10.2218 7.43774 9.886 7.43774 9.47179L7.43775 6.42099Z"
+                    fill="currentColor" />
+                  <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M5.38521 9.28342C4.24823 10.1733 3.69995 11.6443 3.69995 14.2076C3.69995 16.7703 4.2482 18.241 5.38518 19.1308C6.57922 20.0653 8.60338 20.5156 11.969 20.5156C15.3345 20.5156 17.3587 20.0653 18.5527 19.1308C19.6897 18.241 20.238 16.7703 20.238 14.2076C20.238 11.6443 19.6897 10.1733 18.5527 9.28342C17.3587 8.34887 15.3345 7.89856 11.969 7.89856C8.60338 7.89856 6.57924 8.34887 5.38521 9.28342ZM4.46069 8.1022C6.08517 6.83075 8.57053 6.39856 11.969 6.39856C15.3674 6.39856 17.8527 6.83075 19.4772 8.1022C21.1587 9.4183 21.738 11.4768 21.738 14.2076C21.738 16.9379 21.1587 18.9961 19.4772 20.3121C17.8527 21.5834 15.3674 22.0156 11.969 22.0156C8.57052 22.0156 6.08519 21.5834 4.46072 20.3121C2.7792 18.9961 2.19995 16.9379 2.19995 14.2076C2.19995 11.4768 2.77918 9.4183 4.46069 8.1022Z"
+                    fill="currentColor" />
+                </svg>
+                <span class="content">
+                  <h5 class="name">Shop</h5>
+                  <span class="text">View our catalogue</span>
+                </span>
+              </a>
+            </li>
+            <li class="item icon">
+              <a href="" class="link">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-book"
+                  viewBox="0 0 16 16">
+                  <path
+                    d="M1 2.828c.885-.37 2.154-.769 3.388-.893 1.33-.134 2.458.063 3.112.752v9.746c-.935-.53-2.12-.603-3.213-.493-1.18.12-2.37.461-3.287.811zm7.5-.141c.654-.689 1.782-.886 3.112-.752 1.234.124 2.503.523 3.388.893v9.923c-.918-.35-2.107-.692-3.287-.81-1.094-.111-2.278-.039-3.213.492zM8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783" />
+                </svg>
+                <span class="content">
+                  <h5 class="name">Guides</h5>
+                  <span class="text">Find help quickly</span>
+                </span>
+              </a>
+            </li>
+          </ul>
+          <ul class="main">
+            <h4 class="title">Technologies</h4>
+            <li class="item article">
+              <a href="" class="link icon">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github"
+                  viewBox="0 0 16 16">
+                  <path
+                    d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8" />
+                </svg>
+                <span class="content">
+                  <h5 class="name">Github</h5>
+                  <span class="text">Open source code.</span>
+                </span>
+              </a>
+            </li>
+            <li class="item supabase">
+              <a href="" class="link">
+                <svg width="109" height="113" viewBox="0 0 109 113" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M63.7076 110.284C60.8481 113.885 55.0502 111.912 54.9813 107.314L53.9738 40.0627L99.1935 40.0627C107.384 40.0627 111.952 49.5228 106.859 55.9374L63.7076 110.284Z"
+                    fill="url(#paint0_linear)" />
+                  <path
+                    d="M63.7076 110.284C60.8481 113.885 55.0502 111.912 54.9813 107.314L53.9738 40.0627L99.1935 40.0627C107.384 40.0627 111.952 49.5228 106.859 55.9374L63.7076 110.284Z"
+                    fill="url(#paint1_linear)" fill-opacity="0.2" />
+                  <path
+                    d="M45.317 2.07103C48.1765 -1.53037 53.9745 0.442937 54.0434 5.041L54.4849 72.2922H9.83113C1.64038 72.2922 -2.92775 62.8321 2.1655 56.4175L45.317 2.07103Z"
+                    fill="#3ECF8E" />
+                  <defs>
+                    <linearGradient id="paint0_linear" x1="53.9738" y1="54.974" x2="94.1635" y2="71.8295"
+                      gradientUnits="userSpaceOnUse">
+                      <stop stop-color="#249361" />
+                      <stop offset="1" stop-color="#3ECF8E" />
+                    </linearGradient>
+                    <linearGradient id="paint1_linear" x1="36.1558" y1="30.578" x2="54.4844" y2="65.0806"
+                      gradientUnits="userSpaceOnUse">
+                      <stop />
+                      <stop offset="1" stop-opacity="0" />
+                    </linearGradient>
+                  </defs>
+                </svg>
+                <span class="content">
+                  <h5 class="name">Supabase</h5>
+                  <span class="text">Try supabase</span>
+                </span>
+              </a>
+            </li>
+          </ul>
+        </div>
       </li>
       <li class="link">
-        <a href="" class="link-item">Donate</a>
+        <a href="" class="link-item">Docs</a>
       </li>
       <li class="link">
         <a href="" class="link-item">Community</a>
