--- a/index.html
+++ b/index.html
@@ -391,12 +391,12 @@
           </span>
         </span>
       </li>
-      <li class="link icon">
+      <li class="link icon search">
         <a href="" class="link-item">
           <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <circle cx="11.7666" cy="11.7667" r="8.98856" stroke="currentColor" stroke-width="1.5"
+            <circle cx="11.7666" cy="11.7667" r="8.98856" stroke="currentColor" stroke-width="1.6"
               stroke-linecap="round" stroke-linejoin="round" />
-            <path d="M18.0183 18.4853L21.5423 22.0001" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+            <path d="M18.0183 18.4853L21.5423 22.0001" stroke="currentColor" stroke-width="1.6" stroke-linecap="round"
               stroke-linejoin="round" />
           </svg>
         </a>
