--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 </span>
               </a>
             </li>
-            <li class="item journal">
+            <li class="item bulk">
               <a href="" class="link">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M8.15552 15.45C8.15552 15.0357 8.4913 14.7 8.90552 14.7H14.3055C14.7197 14.7 15.0555 15.0357 15.0555 15.45C15.0555 15.8642 14.7197 16.2 14.3055 16.2H8.90552C8.4913 16.2 8.15552 15.8642 8.15552 15.45Z" fill="currentColor" />
@@ -115,7 +115,7 @@
                 </span>
               </a>
             </li>
-            <li class="item">
+            <li class="item bulk authors">
               <a href="" class="link">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path fill-rule="evenodd" clip-rule="evenodd"
@@ -223,7 +223,7 @@
                 </span>
               </a>
             </li>
-            <li class="item shop">
+            <li class="item bulk icon">
               <a href="" class="link">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 576 512">
                   <path
@@ -235,7 +235,7 @@
                 </span>
               </a>
             </li>
-            <li class="item icon">
+            <li class="item bulk icon">
               <a href="" class="link">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 448 512">
                   <path
@@ -250,7 +250,7 @@
           </ul>
           <ul class="main">
             <h4 class="title">You</h4>
-            <li class="item">
+            <li class="item bulk create">
               <a href="" class="link">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path
@@ -266,7 +266,7 @@
                 </span>
               </a>
             </li>
-            <li class="item">
+            <li class="item bulk">
               <a href="" class="link">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path fill-rule="evenodd" clip-rule="evenodd"
