--- a/index.html
+++ b/index.html
@@ -661,7 +661,9 @@
             </h4>
             <div class="info">
               <div class="author">
-                <p class="name"><a href="#">Fredrick Ochieng</a></p>
+                <p class="name">
+                  <a href="#">Fredrick Ochieng</a>
+                </p>
               </div>
               <span class="stats">576 views</span>
             </div>
