--- a/index.html
+++ b/index.html
@@ -576,6 +576,87 @@
           <span class="date">June 23, 2021 (3y ago)</span>
         </a>
       </div>
+      <section class="responses">
+        <div class="response">
+          <div class="head">
+            <span class="info">
+              <a href="/discuss/#A0343" class="code">#A0343</a>
+              <span class="dot"></span>
+              <span class="profile">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-down-short"
+                  viewBox="0 0 16 16">
+                  <path fill-rule="evenodd"
+                    d="M8 4a.5.5 0 0 1 .5.5v5.793l2.146-2.147a.5.5 0 0 1 .708.708l-3 3a.5.5 0 0 1-.708 0l-3-3a.5.5 0 1 1 .708-.708L7.5 10.293V4.5A.5.5 0 0 1 8 4" />
+                </svg>
+                <span class="text">author</span>
+              </span>
+            </span>
+            <span class="date">June 23, 2021 (3y ago)</span>
+          </div>
+          <div class="content" id="content">
+            <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci sit debitis necessitatibus facere quisquam,
+              impedit exercitationem molestiae odit reprehenderit unde cum cumque labore, nihil tempore ut libero explicabo at
+              possimus!</p>
+          </div>
+          <form action="" class="response">
+            <textarea style="resize: none" name="response" placeholder="Respond to #A0343"  id="response" cols="auto" rows="3"></textarea>
+          </form>
+        </div>
+        <div class="response">
+          <div class="head">
+            <span class="info">
+              <a href="/discuss/#A0343" class="code">#A0343</a>
+              <span class="dot"></span>
+              <span class="profile">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-down-short"
+                  viewBox="0 0 16 16">
+                  <path fill-rule="evenodd"
+                    d="M8 4a.5.5 0 0 1 .5.5v5.793l2.146-2.147a.5.5 0 0 1 .708.708l-3 3a.5.5 0 0 1-.708 0l-3-3a.5.5 0 1 1 .708-.708L7.5 10.293V4.5A.5.5 0 0 1 8 4" />
+                </svg>
+                <span class="text">author</span>
+              </span>
+            </span>
+            <span class="date">June 23, 2021 (3y ago)</span>
+          </div>
+          <div class="content" id="content">
+            <p>
+              Adipisci sit debitis necessitatibus facere quisquam,
+              impedit exerci tationem molestiae odit reprehenderit unde cum cumque labore, nihil tempore ut libero explicabo at
+              possimus!
+            </p>
+          </div>
+          <form action="" class="response">
+            <textarea style="resize: none" name="response" placeholder="Respond to #A0343" id="response" cols="auto"
+              rows="3"></textarea>
+          </form>
+        </div>
+        <div class="response">
+          <div class="head">
+            <span class="info">
+              <a href="/discuss/#A0343" class="code">#A0343</a>
+              <span class="dot"></span>
+              <span class="profile">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-down-short"
+                  viewBox="0 0 16 16">
+                  <path fill-rule="evenodd"
+                    d="M8 4a.5.5 0 0 1 .5.5v5.793l2.146-2.147a.5.5 0 0 1 .708.708l-3 3a.5.5 0 0 1-.708 0l-3-3a.5.5 0 1 1 .708-.708L7.5 10.293V4.5A.5.5 0 0 1 8 4" />
+                </svg>
+                <span class="text">author</span>
+              </span>
+            </span>
+            <span class="date">June 23, 2021 (3y ago)</span>
+          </div>
+          <div class="content" id="content">
+            <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci sit debitis necessitatibus facere quisquam,
+              impedit exercitationem molestiae odit reprehenderit unde cum cumque labore, nihil tempore ut libero explicabo at
+              possimus!</p>
+          </div>
+          <form action="" class="response">
+            <textarea style="resize: none" name="response" placeholder="Respond to #A0343" id="response" cols="auto"
+              rows="3"></textarea>
+          </form>
+        </div>
+      </section>
     </article>
     <section class="side">
       <span class="open-details-mobile">
