--- a/index.html
+++ b/index.html
@@ -594,9 +594,9 @@
             <span class="date">June 23, 2021 (3y ago)</span>
           </div>
           <div class="content" id="content">
-            <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci sit debitis necessitatibus facere quisquam,
-              impedit exercitationem molestiae odit reprehenderit unde cum cumque labore, nihil tempore ut libero explicabo at
-              possimus!</p>
+            <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit possimus!</p>
+            <p>Adipisci sit debitis necessitatibus facere quisquam,
+            impedit exercitationem molestiae odit reprehenderit unde cum cumque labore, nihil tempore ut libero explicabo.</p>
           </div>
           <form action="" class="response">
             <textarea style="resize: none" name="response" placeholder="Respond to #A0343"  id="response" cols="auto" rows="3"></textarea>
