--- a/index.html
+++ b/index.html
@@ -621,8 +621,13 @@
               <span class="no">98</span>
             </span>
           </div>
-          <form action="" class="response">
+          <form action="" class="respond">
             <textarea style="resize: none" name="response" placeholder="Respond to #A0343"  id="response" cols="auto" rows="3"></textarea>
+            <button type="submit">
+              <svg width="24px" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 512 512">
+                <path d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM385 231c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0l-71-71V376c0 13.3-10.7 24-24 24s-24-10.7-24-24V193.9l-71 71c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9L239 119c9.4-9.4 24.6-9.4 33.9 0L385 231z" />
+              </svg>
+            </button>
           </form>
         </div>
         <div class="response">
